<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable = "true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lbl_cancel"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_small"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lbl_filter"
        android:layout_margin="@dimen/margin_medium"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading_1x"
        android:layout_centerHorizontal="true"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lbl_reset"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_small"
        android:textColor="@color/colorPrimary"
        >

    </TextView>

    <TextView
        android:id="@+id/tvSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lbl_sort_by"
        android:layout_below="@+id/tvCancel"
        android:textSize="@dimen/text_heading_1x"
        android:layout_margin="@dimen/margin_medium"
        android:textStyle="bold"
        >
    </TextView>
    <Spinner
        android:layout_below="@+id/tvSortBy"
        android:id="@+id/price_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_medium"
        />

    <TextView
        android:id="@+id/tvRating"
        android:layout_below="@+id/price_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_heading_1x"
        android:text="@string/tv_lbl_rating"
        android:textStyle="bold"
        android:layout_margin="@dimen/margin_medium"
        >
    </TextView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_below="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:singleLine="true"
        >
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/chip_tv_none"
            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/chipi_tv_1_star"
            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_tv_2_stars"
            style="@style/Widget.MaterialComponents.Chip.Choice"

            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_tv_3_stars"
            style="@style/Widget.MaterialComponents.Chip.Choice"

            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_tv_4_stars"
            style="@style/Widget.MaterialComponents.Chip.Choice"

            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_tv_5_stars"
            style="@style/Widget.MaterialComponents.Chip.Choice"

            />

    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/tvPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lbl_price_range"
        android:layout_below="@id/chipGroup"
        android:textSize="@dimen/text_heading_1x"
        android:layout_margin="@dimen/margin_medium"
        android:textStyle="bold"
        >
    </TextView>
    <com.google.android.material.slider.Slider
        android:layout_below="@+id/tvPriceRange"
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:value="8.09"
        android:valueFrom="0.0"
        android:valueTo="11.0"
        />
    <LinearLayout
        android:layout_below="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_medium"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/btn_lbl_filter_now"
            android:textAlignment="center"
            android:textColor="@color/white"
            >
        </Button>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_medium"
            android:drawableRight="@drawable/ic_map_white_24dp"
            >
        </Button>

    </LinearLayout>
</RelativeLayout>