<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="Explore"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilter"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_small"
            android:backgroundTint="#FFFFFF"
            android:text="@string/btn_lbl_filters"
            android:textColor="#000000"
            app:icon="@drawable/ic_filter_list_black_24dp"
            app:iconGravity="start"
            app:iconTint="@color/colorPrimary"></com.google.android.material.button.MaterialButton>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnFilter"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/hint_location"
            app:endIconDrawable="@drawable/ic_location_on_black_24dp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:hint="@string/hint_check_in">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCheckIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:hint="@string/hint_check_out">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCheckOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutDate"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:hint="@string/hint_count">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                android:hint="@string/hint_rooms">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/btn_lbl_search_now"
                android:textAlignment="center"
                android:layout_marginRight="@dimen/margin_medium"
                android:textColor="@color/white"></Button>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_map_white_24dp"></Button>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTopSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutButton"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold"
            android:text="TOP SEARCHES"
            >
        </TextView>
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_below="@+id/tvTopSearch"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <include layout="@layout/item_top_search_place"/>
                <include layout="@layout/item_top_search_place"/>
                <include layout="@layout/item_top_search_place"/>
            </LinearLayout>


        </HorizontalScrollView>
        <TextView
            android:id="@+id/tvRecentSearch"
            android:layout_below="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold"
            android:text="@string/tv_lbl_recent_searchs"
            >
        </TextView>
    </RelativeLayout>

    <include layout="@layout/fragment_bottom_sheet_filer" />
</LinearLayout>
